--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "chart.js": "^4.5.1",
-    "firebase": "^12.7.0",
-    "firebase-admin": "^13.6.0",
-    "next": "16.1.1",
+    "firebase": "^12.8.0",
+    "firebase-admin": "^12.7.0",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.3",
